update erd & open api
